src/graph/snapshots/hopr_api__graph__costs__tests__adversarial_peer_good_probes_but_zero_acks.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 0, result_cost: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0
  intermediate:
    capacity: 1000
    score: 0.95
initial_cost: 1
path_index: 0
result_cost: -0.95
