src/graph/snapshots/hopr_api__graph__costs__tests__forward_cost_fn_invariants.snap
---
source: api/src/graph/costs.rs
expression: "Invariants\n{ initial_cost: cost_fn.initial_cost(), min_cost: cost_fn.min_cost(), }"
---
initial_cost: 1
min_cost: 0
