src/graph/snapshots/hopr_api__graph__costs__tests__forward_length_two_intermediate_at_index_one-2.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{\n    observations: obs_e, initial_cost: 1.0, path_index: 1, result_cost:\n    cost_empty\n}"
---
observations:
  immediate: ~
  intermediate: ~
initial_cost: 1
path_index: 1
result_cost: 0.5
